dotnet/productService/config/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: product-service
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dotnetapi.ragab.blog`)
      priority: 10
      services:
        - name: product-service
          port: 80
  tls:
    secretName: dotnet-tls-secret
